# docker-multi-stage-build-python-example

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  wait-for-it.sh
