[tool.poetry]
name = "testfastapiproject"
version = "0.1.0"
description = ""
authors = ["Kyrylo Kundik <goliathusua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
gunicorn = "^20.1.0"
uvicorn = "^0.21.1"
elasticsearch = {extras = ["async"], version = "^8.6.2"}
databases = {extras = ["postgresql"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
faker = "^17.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
